Add sidebar for template

--- a/templates/pythoncocoa/include/sidebar-about.html
+++ b/templates/pythoncocoa/include/sidebar-about.html
@@ -1,18 +1,3 @@
 <div id="main-content-right">
-		<h2 id="testimonials">Testimonials</h2>
-      	<p class="testimonial">
-          "OMG.  DM is like the greatest company
-           ever.  The results they got our small
-           business were more than I could have
-           ever expected."
-          </p>
-          <span class="client-name">Judy Roberts, CEO</span>
-          <p class="testimonial">
-          "OMG.  DM is like the greatest company
-           ever.  The results they got our small
-           business were more than I could have
-           ever expected."
-          </p>
-          <span class="client-name">Judy Roberts, CEO</span>
-  	
+		<h2 id="testimonials">Testimoniales</h2>
 </div>
