--- a/templates/pythoncocoa/include/sidebar-home.html
+++ b/templates/pythoncocoa/include/sidebar-home.html
@@ -3,5 +3,6 @@
         <li><a href="http://python.org/">Python</a></li>
     	<li><a href="http://pyobjc.sourceforge.net/">PyObjC</a></li>
         <li><a href="http://rubycocoa.com/">Ruby Cocoa</a></li>
+        <li><a href="http://www.cocoadevcentral.com/">Cocoa Dev Central</a></li>
     </ul>
 <!--a id="contact-us-button" href="/contact">Contact Us Today!</a-->
